manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "kubeclustertest-c8cf"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "kubeclustertest-c8cf"
  template:
    metadata:
      labels:
        app: "kubeclustertest-c8cf"
    spec:
      containers:
        - name: "kubeclustertest-c8cf"
          image: "contanertestregistry.azurecr.io/kubeclustertest"
          ports:
          - containerPort: 80
